@@ -29,8 +29,6 @@ package org.objectweb.asm.commons;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
 
@@ -44,7 +42,7 @@ class SimpleRemapperTest {
   @Test
   void testMapSignature_remapParentOnly_nestedClassExtends() {
     String inputSignature = "LOuter<Ljava/lang/Object;>.Inner;";
-    Remapper remapper = new SimpleRemapper(Collections.singletonMap("Outer", "RenamedOuter"));
+    Remapper remapper = new SimpleRemapper(Map.of("Outer", "RenamedOuter"));
 
     String remappedSignature = remapper.mapSignature(inputSignature, false);
 
@@ -54,8 +52,7 @@ class SimpleRemapperTest {
   @Test
   void testMapSignature_remapChildOnly_nestedClassExtends() {
     String inputSignature = "LOuter<Ljava/lang/Object;>.Inner;";
-    Remapper remapper =
-        new SimpleRemapper(Collections.singletonMap("Outer$Inner", "Outer$RenamedInner"));
+    Remapper remapper = new SimpleRemapper(Map.of("Outer$Inner", "Outer$RenamedInner"));
 
     String remappedSignature = remapper.mapSignature(inputSignature, false);
 
@@ -65,8 +62,7 @@ class SimpleRemapperTest {
   @Test
   void testMapSignature_remapChildOnly_nestedClassExtends_identifiersWithDollarSign() {
     String inputSignature = "LOuter<Ljava/lang/Object;>.Inner$1;";
-    Remapper remapper =
-        new SimpleRemapper(Collections.singletonMap("Outer$Inner$1", "Outer$RenamedInner$1"));
+    Remapper remapper = new SimpleRemapper(Map.of("Outer$Inner$1", "Outer$RenamedInner$1"));
 
     String remappedSignature = remapper.mapSignature(inputSignature, false);
 
@@ -76,9 +72,8 @@ class SimpleRemapperTest {
   @Test
   void testMapSignature_remapBothParentAndChild_nestedClassExtends() {
     String inputSignature = "LOuter<Ljava/lang/Object;>.Inner;";
-    Map<String, String> mapping = new HashMap<>();
-    mapping.put("Outer", "RenamedOuter");
-    mapping.put("Outer$Inner", "RenamedOuter$RenamedInner");
+    Map<String, String> mapping =
+        Map.of("Outer", "RenamedOuter", "Outer$Inner", "RenamedOuter$RenamedInner");
     Remapper remapper = new SimpleRemapper(mapping);
 
     String remappedSignature = remapper.mapSignature(inputSignature, false);
