@@ -37,7 +37,6 @@ import static org.junit.jupiter.api.Assumptions.assumeTrue;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import org.junit.jupiter.api.Test;
@@ -85,10 +84,7 @@ class TextifierTest extends AsmTest {
             0);
 
     String expectedText =
-        new String(
-                Files.readAllBytes(
-                    Paths.get("src/test/resources/" + classParameter.getName() + ".txt")),
-                StandardCharsets.UTF_8)
+        Files.readString(Paths.get("src/test/resources/" + classParameter.getName() + ".txt"))
             .replace("\r", "");
 
     assertEquals(expectedText, output.toString());
